[gd_scene load_steps=17 format=3 uid="uid://iigkdv2n7slv"]

[ext_resource type="Script" uid="uid://nr85vytgaymu" path="res://RPG/Enemy/enemy.gd" id="1_fwvcy"]
[ext_resource type="Texture2D" uid="uid://dvnrfdlgjh6q" path="res://RPG/Enemy/enemy.webp" id="1_sbhnn"]
[ext_resource type="Texture2D" uid="uid://5d8vmafsp4gh" path="res://RPG/Enemy/bullet.webp" id="2_x4emb"]
[ext_resource type="Script" uid="uid://b0t4lfhyoj0na" path="res://RPG/Enemy/gun.gd" id="3_dbchi"]
[ext_resource type="AudioStream" uid="uid://draqapi0jy6y" path="res://RPG/Enemy/hit.wav" id="3_mknhm"]
[ext_resource type="AudioStream" uid="uid://esllbqs0alps" path="res://RPG/Enemy/shoot.wav" id="3_ut2ri"]
[ext_resource type="AudioStream" uid="uid://d1mmp0hy3omdb" path="res://RPG/Enemy/explode.wav" id="4_fwvcy"]
[ext_resource type="PackedScene" uid="uid://yam05o5ebvs5" path="res://RPG/Player/HealthBar.tscn" id="5_healthbar"]

[sub_resource type="Animation" id="Animation_fwvcy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:scale_amount_max")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:collision_layer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion:amount")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Explosion:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Explosion:scale_amount_min")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Hit:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Explode:playing")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dbchi"]
resource_name = "destory"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(0.0796601, 1),
"update": 0,
"values": [0.0, 3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(2.29, 0.183, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -32), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Explosion:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Explosion:scale_amount_min")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.533333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 16.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Explosion:scale_amount_max")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.533333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 16.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Hit:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Explode:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".:collision_layer")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/10/type = "method"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath(".")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_mknhm"]
resource_name = "idle"
length = 3.0
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.66, 0.999, 1.332, 1.665, 1.998, 2.331, 2.664, 2.997),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 5, 6, 5, 6, 7, 6, 7, 5]
}

[sub_resource type="Animation" id="Animation_ut2ri"]
resource_name = "walk"
step = 0.033
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0625, 0.1249, 0.1874, 0.2499, 0.3124, 0.3749, 0.4373, 0.4998, 0.5623, 0.6248, 0.6872, 0.7497, 0.8122, 0.8747, 0.9371),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ut2ri"]
_data = {
&"RESET": SubResource("Animation_fwvcy"),
&"destory": SubResource("Animation_dbchi"),
&"idle": SubResource("Animation_mknhm"),
&"walk": SubResource("Animation_ut2ri")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sbhnn"]
radius = 64.0
height = 178.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_o74jf"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_fwvcy"]
offsets = PackedFloat32Array(0.5, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 144
script = ExtResource("1_fwvcy")

[node name="PlatformDetector" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(0, 108)
collision_mask = 16

[node name="FloorDetectorLeft" type="RayCast2D" parent="."]
position = Vector2(-80, 0)
target_position = Vector2(0, 99)
collision_mask = 16

[node name="FloorDetectorRight" type="RayCast2D" parent="."]
position = Vector2(80, -3)
target_position = Vector2(0, 100)
collision_mask = 16

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_sbhnn")
flip_h = true
hframes = 8
vframes = 2

[node name="HealthBar" parent="Sprite2D" instance=ExtResource("5_healthbar")]
offset_left = -20.0
offset_top = -35.0
offset_right = 30.0
offset_bottom = -25.0
scale = Vector2(0.8, 0.8)

[node name="Gun" type="Marker2D" parent="Sprite2D"]
position = Vector2(30, 0)
script = ExtResource("3_dbchi")

[node name="Shoot" type="AudioStreamPlayer2D" parent="Sprite2D/Gun"]
stream = ExtResource("3_ut2ri")

[node name="Cooldown" type="Timer" parent="Sprite2D/Gun"]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ut2ri")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_sbhnn")

[node name="Explosion" type="CPUParticles2D" parent="."]
self_modulate = Color(1, 1, 1, 0.121569)
material = SubResource("CanvasItemMaterial_o74jf")
emitting = false
amount = 4
texture = ExtResource("2_x4emb")
lifetime = 0.5
one_shot = true
speed_scale = 1.2
explosiveness = 0.7
emission_shape = 1
emission_sphere_radius = 16.0
spread = 180.0
gravity = Vector2(0, -250)
color_ramp = SubResource("Gradient_fwvcy")

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_mknhm")

[node name="Explode" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_fwvcy")
